api/manual-deployment/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: devops-course-api-manual
  labels:
    app: api-devops-course
spec:
  selector:
    matchLabels:
      app: api-devops-course
  template:
    metadata:
      labels:
        app: api-devops-course
    spec:
      containers:
      - name: api
        image: # TODO: image
        command:
          - "/bin/sh"
          - "-c"
        args:
          - . # TODO: path to download model script;
            # TODO: path to api.py script
        resources:
          limits:
            memory: "3Gi"
            cpu: "1"
        ports:
          - containerPort: 9000
