api/manual-deployment/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: api-service-manual
  labels:
    app: api-devops-course
spec:
  selector:
    app: api-devops-course
  ports:
    - port: 9000
      targetPort: 9000
